kanc/src/tests/sample_code/should_fail/multi_file/bind/name_clash/src/mod.ph
mod nat;
use nat.*;

mod other_nat;
use other_nat.*;
